# crystalshift-xrd

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  README.md  app.py  constraints-py311.txt  paseo.json  pyproject.toml  启动 CrystalShift XRD.bat
.streamlit/: config.toml
benchmarks/: fit_direct_evaluator.py
frontend/: package-lock.json  package.json  tsconfig.json
orthoxrd/: __init__.py  batch.py  batch_models.py  config.py  constants.py  export_current_rows.py  export_current_zip.py  export_excel.py  export_excel_packages.py  export_fit_rows.py  export_fit_zip.py  export_live.py  export_manifest.py  export_origin.py  export_rows.py  export_schema.py  export_sweep_rows.py  export_sweep_zip.py  export_writer.py  export_zip.py  fit.py  fit_models.py  fit_observations.py  i18n.py  live.py  live_component.py  models.py  peak_metrics.py  powder.py  presets.py  profiles.py  scattering.py  simulation.py  structure_coordinates.py  structure_factor.py  structure_geometry.py  structure_state.py  sweep_limits.py  trajectory.py  trajectory_validation.py  (+30 more)
tests/: test_app.py  test_batch.py  test_config.py  test_export_excel.py  test_export_v2.py  test_fit.py  test_fit_export.py  test_fit_observations.py  test_intensity_factors.py  test_live.py  test_live_export.py  test_powder.py  test_profiles.py  test_structure_coordinates.py  test_structure_factor.py  test_structure_geometry.py  test_sweep_limits.py  test_sweep_v2.py  test_ui_f2_structure.py  test_ui_live_radiation.py  test_ui_plot_fit.py  test_ui_plot_structure.py  test_version.py  xlsx_assertions.py
(+13 files in other folders)
