[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orthorhombic-xrd-simulator"
version = "2.3.0"
description = "CrystalShift XRD: scientific Streamlit workbench for Cmcm 4c powder XRD simulation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3",
    "plotly>=5.20,<7",
    "pymatgen>=2024.5,<2027",
    "streamlit>=1.57,<2",
    "xlsxwriter>=3.2,<4",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.30",
    "pytest>=8",
    "ruff>=0.9",
]

[tool.setuptools.packages.find]
include = ["orthoxrd*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E741", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"orthoxrd/locales/*.py" = ["E501"]

[tool.basedpyright]
include = ["orthoxrd", "app.py"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
exclude = ["**/__pycache__"]
